tests/ui/methods/autoderef-recursion-limit-ice.stderr
error[E0055]: reached the recursion limit while auto-dereferencing `Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<Wrap<...>>>>>>>>>>>`
  --> $DIR/autoderef-recursion-limit-ice.rs:22:7
   |
LL |     w.nonexistent_method();
   |       ^^^^^^^^^^^^^^^^^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`autoderef_recursion_limit_ice`)
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/autoderef-recursion-limit-ice.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `nonexistent_method` found for struct `Wrap<u32>` in the current scope
  --> $DIR/autoderef-recursion-limit-ice.rs:22:7
   |
LL | struct Wrap<T>(T);
   | -------------- method `nonexistent_method` not found for this struct
...
LL |     w.nonexistent_method();
   |       ^^^^^^^^^^^^^^^^^^ method not found in `Wrap<u32>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0055, E0599.
For more information about an error, try `rustc --explain E0055`.
